# immich-edit

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.example.toml  docker-compose.example.yml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  deployment_problem.yml  feature_request.yml  raw_format_support.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  docker.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/migrations/: 0001_edits.sql  0002_export_jobs.sql  0003_edits_history.sql  0004_edits_history_action.sql
crates/backend/src/: app.rs  config.rs  error.rs  immich.rs  lens_profile.rs  lib.rs  main.rs  routes.rs  services.rs  state.rs  telemetry.rs
crates/backend/src/immich/: client.rs  dto.rs
crates/backend/src/routes/: albums.rs  assets.rs  auth.rs  debug.rs  edited_thumb.rs  edits.rs  export.rs  folders.rs  health.rs  lens_profile.rs  people.rs  preview.rs  rasters.rs  search.rs  tags.rs
crates/backend/src/services/: edited_thumb.rs  edits_store.rs  preview_cache.rs  preview_meta.rs  raster_store.rs  render.rs  render_queue.rs  render_telemetry.rs
crates/backend/tests/: export_immich.rs  preview_edits.rs  routes.rs
crates/backend/tests/common/: mod.rs
crates/raw-pipeline/: Cargo.toml
crates/raw-pipeline/assets/shaders/: dehaze_ab.wgsl  dehaze_apply.wgsl  dehaze_box.wgsl  dehaze_downsample.wgsl  dehaze_min.wgsl  dehaze_norm.wgsl  dehaze_pack.wgsl  demosaic.wgsl  effects_tone.wgsl  luma_extract.wgsl  mipgen.wgsl  nr.wgsl  nr_smooth.wgsl  presence_adjust.wgsl  process.wgsl  sensor.wgsl  sharpen.wgsl  sharpen_blur.wgsl  sharpen_combine.wgsl
crates/raw-pipeline/benches/: cpu_pipeline.rs
crates/raw-pipeline/src/: auto.rs  cache.rs  cancel.rs  color.rs  cpu.rs  decode.rs  edit_manifest.rs  edits.rs  encode.rs  exif.rs  frame.rs  geom.rs  gpu.rs  histogram.rs  lib.rs  mask_raster.rs  ops.rs  presence.rs
crates/raw-pipeline/src/cpu/: dehaze.rs  demosaic.rs  fused.rs  masked.rs  pipeline.rs  presence.rs  presence_pyramid.rs  scratch.rs  transform.rs
crates/raw-pipeline/src/encode/: icc.rs
crates/raw-pipeline/src/gpu/: context.rs  helpers.rs  pass.rs  passes.rs  pipeline.rs  readback.rs  renderer.rs  resources.rs  shader_builder.rs  texture_pool.rs  uniform_pool.rs  uniforms.rs
crates/raw-pipeline/src/gpu/passes/: dehaze.rs  demosaic.rs  effects_tone.rs  luma_pyramid.rs  mask_blend.rs  mask_weight.rs  mipgen.rs  nr.rs  nr_smooth.rs  presence.rs  process.rs  sensor.rs  sharpen.rs  tonemap.rs  wb_prepare.rs
crates/raw-pipeline/src/ops/: brightness.rs  clarity.rs  color_grade.rs  color_matrix.rs  color_nr.rs  contrast.rs  crop_rotate.rs  curves.rs  dehaze.rs  exposure.rs  geometry.rs  grain.rs  highlights_shadows.rs  hsl.rs  lens_ca.rs  lens_distortion.rs  lens_profile.rs  lens_vignette.rs  local.rs  luma_nr.rs  masks.rs  mod.rs  output.rs  sample.rs  saturation.rs  sharpen.rs  tests.rs  texture.rs  tone_regions.rs  transform.rs  user_wb.rs  vibrance.rs  vignette.rs  white_balance.rs
crates/raw-pipeline/src/tone/: agx.rs  mod.rs  shared.rs  wgsl.rs
crates/raw-pipeline/tests/: color_charts.rs  cpu_baseline.rs  cpu_render.rs  exif_inject.rs  gpu_render.rs  multi_feature.rs  parity_metrics.rs  perf_gate.rs
crates/raw-pipeline/tests/baselines/: cpu_baseline.json  multi_feature.json  perf_gate.json
crates/raw-pipeline/tests/fixtures/: .gitignore  LICENSE-SAMPLES.md  Nikon_D2H_12bit_12bit_compressed_Lossy_type_1_3-2.nef  Panasonic_DMC-LX7_1-1.rw2
docs/: deploy.md  pipeline.md  troubleshooting.md
web/: README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: editor-flow.spec.ts  editor-scenarios.spec.ts  login.spec.ts
web/src/: app.css  app.html  hooks.client.ts
web/src/lib/: keybinds.ts
web/src/lib/api/: albums.ts  assets.ts  auth.ts  client.ts  diagnostics.ts  edits.ts  export.ts  folders.ts  lensProfile.ts  people.ts  preview.ts  rasters.ts  search.ts  tags.ts
web/src/lib/components/: EmptyState.svelte  Icon.svelte  MultiSelect.svelte  Popover.svelte  Spinner.svelte
web/src/lib/components/browse/: AlbumCard.svelte  AssetGrid.svelte  AssetTile.svelte  BrowseHeader.svelte
web/src/lib/components/editor/: BottomBar.svelte  BrushCanvas.svelte  CropOverlay.svelte  EditDrawer.svelte  ExifDetails.svelte  ExifSummary.svelte  Histogram.svelte  HistoryPopover.svelte  ImageToolbar.svelte  MaskOverlay.svelte  RatingControl.svelte  SaveStatus.svelte  SliderRow.svelte  TagsStrip.svelte  Viewer.svelte
web/src/lib/components/layout/: Navbar.svelte
web/src/lib/components/shell/: Filmstrip.svelte  KeybindsHelp.svelte  LeftSidebar.svelte  RightSidebar.svelte  Shell.svelte  SidebarLink.svelte  SidebarSection.svelte  Toasts.svelte  TopBar.svelte
web/src/lib/panels/: Basic.svelte  Color.svelte  ColorGrading.svelte  Curves.svelte  Detail.svelte  Display.svelte  Effects.svelte  Export.svelte  Histogram.svelte  Hsl.svelte  Info.svelte  Lens.svelte  MaskedEditSlider.svelte  Masks.svelte  Tags.svelte  Transform.svelte  WhiteBalance.svelte  registry.ts
web/src/lib/stores/: album.svelte.ts  browseControls.svelte.ts  browseFeed.svelte.ts  browsing.svelte.ts  editedThumbs.svelte.ts  editor.svelte.ts  library.svelte.ts  toasts.svelte.ts  ui.svelte.ts
web/src/lib/types/: album.ts  asset.ts  edits.ts  masks.ts  preview.ts
web/src/lib/util/: exif.ts  history.ts
web/src/lib/utils/: brush.ts  download.ts  geom.ts  geomTransform.ts  lensWarp.ts  object-url.ts  single-flight.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/albums/[id]/: +page.svelte
web/src/routes/assets/[id]/: +page.svelte
web/src/routes/edited/: +page.svelte
web/src/routes/favorites/: +page.svelte
web/src/routes/folders/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/people/[id]/: +page.svelte
web/src/routes/photos/: +page.svelte
web/src/routes/settings/: +page.svelte
web/src/routes/tags/[id]/: +page.svelte
(+2 files in other folders)
