[workspace]
resolver = "3"
members = ["crates/backend", "crates/raw-pipeline"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
bytes = "1"
toml = "1.1"
url = "2"
rayon = "1"

[profile.release]
lto = "thin"
codegen-units = 16
strip = "symbols"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
