[package]
name = "immich-edit-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "immich-edit"
path = "src/main.rs"

[dependencies]
raw-pipeline = { path = "../raw-pipeline" }
anyhow = "1"
axum = "0.8"
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "limit", "fs"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
http = "1"
lru = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
url = { workspace = true }
tempfile = "3"
