[package]
name = "immich-edit-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "immich-edit"
path = "src/main.rs"

[dependencies]
raw-pipeline = { path = "../raw-pipeline" }
anyhow = "1"
axum = "0.8"
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip", "timeout", "limit", "fs", "set-header", "request-id", "util", "catch-panic"] }
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
http = "1"
lru = "0.12"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "uuid", "chrono", "migrate", "macros"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sha2 = "0.10"
hex = "0.4"
mimalloc = { version = "0.1", default-features = false }
lensfun = "=0.7.0"
tower_governor = { version = "0.8", default-features = false, features = ["axum"] }

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
reqwest = { version = "0.13", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
url = { workspace = true }
tempfile = "3"
