[package]
name = "raw-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
rawler = "0.7"
turbojpeg = "1"
sha2 = "0.10"
hex = "0.4"
