[package]
name = "raw-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
rawler = "0.7"
turbojpeg = "1"
sha2 = "0.10"
hex = "0.4"
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.3"
parking_lot = "0.12"
lru = "0.12"
half = "2.7.1"
fast_image_resize = "6.0.0"
