[package]
name = "raw-pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
rawler = "0.7"
turbojpeg = "1"
sha2 = "0.10"
hex = "0.4"
wgpu = "22"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
parking_lot = "0.12"
lru = "0.12"
half = "2.7.1"
fast_image_resize = "6.0.0"
rayon = { workspace = true }
little_exif = "0.6"
png = "0.18"
tiff = "0.11"
webp = "0.3"
rgb = "0.8"
libheif-rs = "2.7"
jpegxl-rs = "0.14"
image = { version = "0.25", default-features = false, features = ["gif", "bmp"] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "cpu_pipeline"
harness = false
